# IconMaker

./: .gitignore  CHANGELOG.md  CLAUDE.md  GITHUB_SECRETS_SETUP.md  README.md  SIGNING_KEY_SETUP.md  TECHNICAL_DOCUMENTATION.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/commands/: release.md
.github/workflows/: release.yml
docs/: SVG_WORKSPACE_MERGE_PLAN.md
scripts/: bump-version.js
src/: App.tsx
src-tauri/: Cargo.toml  iconmaker.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: IconMaker.psd  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  mod.rs
src-tauri/src/utils/: mod.rs
src/components/: BatchExportDialog.tsx  CategoryDropdown.tsx  ExportPanel.tsx  FavoritesPanel.tsx  IconCard.tsx  IconGrid.tsx  LicenseDialog.tsx  SearchBar.tsx  SettingsDialog.tsx  UpdateDialog.tsx
src/components/svg-icon/: ColorSwatchPicker.tsx  SvgIconPanel.tsx  index.ts
src/components/ui/: button.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  toast.tsx
src/hooks/: useAutoUpdater.ts  useBatchExport.ts  useDebounce.ts  useExport.ts  useFavorites.ts  useIconDetails.ts  useIconSearch.ts  useKeyboardShortcuts.ts  useSettings.ts  useSvgWorkspace.ts
src/lib/svgIcon/: svgIconDefaults.ts  svgIconExport.ts  svgIconSearch.ts  svgIconStyle.ts  svgSanitizer.ts  svgWorkspaceSaver.ts
src/services/: exportService.ts  iconifyApi.ts  storageService.ts
src/stores/: searchStore.ts
src/types/: export.ts  icon.ts  settings.ts  svgIcon.ts
